<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single" android:id="@+id/g1">
        <item
            android:id="@+id/action_pay"
            android:checked="false"
            android:title="@string/make_contibutions"
            android:icon="@drawable/ic_payment"/>
        <item
            android:id="@+id/action_history"
            android:checked="false"
            android:title="@string/payment_history"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/action_news"
            android:checked="false"
            android:title="@string/news"
            android:icon="@drawable/ic_archive"/>
    </group>


    <group android:checkableBehavior="single" android:id="@+id/g2">
        <item
            android:id="@+id/action_rate"
            android:checked="false"
            android:title="@string/rate"
            android:icon="@drawable/ic_action_star_10"/>
        <item
            android:id="@+id/action_feedback"
            android:checked="false"
            android:title="@string/feedback"
            android:icon="@drawable/ic_action_monolog"/>

        <item
            android:id="@+id/action_share"
            android:checked="false"
            android:title="@string/share"
            android:icon="@drawable/ic_action_share_2"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/g3">
        <item
            android:id="@+id/action_settings"
            android:checked="false"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_action_settings"/>
        <item
            android:id="@+id/action_about"
            android:checked="false"
            android:title="@string/action_about"
            android:icon="@drawable/ic_action_info" />

        <item
            android:id="@+id/action_sign_out"
            android:checked="false"
            android:title="@string/log_out"
            android:icon="@drawable/ic_action_exit"/>

    </group>
    <group android:id="@+id/g4">

    </group>
    <item
        android:id="@+id/tt"
        android:title="Powered by Tree Tech ICT." />
</menu>
