<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dipoletech.wacos.Contributions"
    android:background="@color/g1"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_welcome"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.87"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="5dp"
            android:id="@+id/textView2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/choice_holder"
            android:layout_marginTop="30dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/p_of_p"
                android:id="@+id/textView3"
                android:padding="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinner"
                android:textAlignment="center"
                android:backgroundTint="@android:color/darker_gray" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:background="@android:color/white"
            android:id="@+id/linearLayout7"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_payment"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/darker_gray"
                android:contentDescription="@string/image" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:background="@android:color/white"
                android:hint="@string/enter_amount"
                android:id="@+id/contribution_amount" />
        </LinearLayout>


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_payment"
            android:layout_marginTop="60dp"
            android:alpha="0.9"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/pay_bnt"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

    </LinearLayout>




</ScrollView>
