<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dipoletech.nigeriansocietyofengineers.RegisterFragment"
    android:background="@color/g1">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cap_1"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall"
            android:background="@color/disabled2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:id="@+id/imageView5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:clickable="false"
                android:buttonTint="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surety_id_checked"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
            </LinearLayout>


    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/btn_cap_1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:background="@android:color/white"
        android:id="@+id/linearLayout4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_user"
            android:layout_gravity="center_vertical"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/image" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName|textCapWords"
            android:paddingLeft="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:hint="@string/name_tv"
            android:id="@+id/reg_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:background="@android:color/white"
        android:id="@+id/linearLayout5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_mail"
            android:layout_gravity="center_vertical"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/image" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:id="@+id/reg_email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:background="@android:color/white"
        android:id="@+id/linearLayout8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_phone"
            android:layout_gravity="center_vertical"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/image" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:hint="@string/phone"
            android:id="@+id/reg_phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:background="@android:color/white"
        android:id="@+id/linearLayout7">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_lock_closed"
            android:layout_gravity="center_vertical"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/image" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:id="@+id/reg_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:background="@android:color/white"
        android:id="@+id/linearLayout6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repeat"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/image" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_marginLeft="4dp"
            android:paddingLeft="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:hint="@string/password_again"
            android:id="@+id/reg_password2" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/linearLayout9">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_accept"
            android:id="@+id/checkBox"
            android:textColor="@android:color/tertiary_text_dark"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terms_of_s"
            android:id="@+id/terms_of_serv_tv"
            android:textColor="@color/colorPrimaryDark"
            android:alpha="0.7"
            android:layout_marginLeft="5dp"
            android:layout_alignBaseline="@+id/checkBox"
            android:layout_alignBottom="@+id/checkBox"
            android:layout_toRightOf="@+id/checkBox"
            android:layout_toEndOf="@+id/checkBox"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/and"
            android:id="@+id/textView5"
            android:layout_marginLeft="5dp"
            android:layout_alignBaseline="@+id/checkBox"
            android:layout_alignBottom="@+id/checkBox"
            android:layout_toRightOf="@+id/terms_of_serv_tv"
            android:layout_toEndOf="@+id/terms_of_serv_tv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/agreement"
            android:id="@+id/agreement_tv"
            android:textColor="@color/colorPrimaryDark"
            android:alpha="0.7"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:layout_alignBaseline="@+id/checkBox"
            android:layout_alignBottom="@+id/checkBox"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/register_button"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="25dp" />


        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/npBar"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"
            android:progressBackgroundTintMode="multiply"
            android:progressBackgroundTint="@android:color/darker_gray"
            android:layout_alignBottom="@+id/register_button"
            android:layout_alignLeft="@+id/register_button"
            android:layout_alignStart="@+id/register_button" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:id="@+id/linearLayout10"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/already_registered"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/here"
            android:id="@+id/s_here_tv"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:alpha="0.7"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4" />
    </RelativeLayout>

</LinearLayout>




</RelativeLayout>
